--- a/depends/common/pillow/CMakelists.txt
+++ b/depends/common/pillow/CMakelists.txt
@@ -1,11 +1,18 @@
 project(pillow)
 
+cmake_minimum_required(VERSION 2.8)
+
 include(ExternalProject)
+
+set(BUILD_COMMAND $(NATIVEPREFIX)/bin/python setup.py)
+
+
 externalproject_add(pillow
-                    SOURCE_DIR ${CMAKE_SOURCE_DIR}
-                    UPDATE_COMMAND autoreconf -vif <SOURCE_DIR>
-                    CONFIGURE_COMMAND ${NATIVEPREFIX}/bin/python <SOURCE_DIR>/setup.py build
+                    SOURCE_DIR ${PROJECT_SOURCE_DIR}
+                    PREFIX ${PROJECT_NAME}
+                    CONFIGURE_COMMAND ""
                     INSTALL_COMMAND ""
+                    BUILD_COMMAND PYTHONPATH=${CMAKE_INSTALL_PREFIX}/share/$(APP_NAME)/addons/script.module.pil:$(PREFIX)/lib/python2.7/site-packages/ ${BUILD_COMMAND} build_ext --plat-name
                     BUILD_IN_SOURCE 1)
                   
-install(CODE "execute_process(COMMAND make install WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})")
+install(CODE "execute_process(COMMAND ${BUILD_COMMAND} install --install-lib ${OUTPUT_DIR}/lib WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})")
