--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,5 @@
+project(inputstream.mpd)
+
 cmake_minimum_required(VERSION 2.6)
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${PROJECT_SOURCE_DIR})
@@ -6,22 +8,19 @@ enable_language(CXX)
 
 find_package(PkgConfig)
 find_package(Kodi REQUIRED)
+find_package(p8-platform REQUIRED)
+find_package(OpenSSL REQUIRED)
 find_package(ZLIB REQUIRED)
-find_package(JPEG REQUIRED)
-find_package(PNG REQUIRED)
-find_package(Freetype REQUIRED)
 find_package(PILLOW REQUIRED)
 
-list(APPEND DEPLIBS)
+list(APPEND DEPLIBS ${p8-platform_LIBRARIES})
 
 include_directories(${INCLUDES}
-                    ${JPEG_INCLUDE_DIR}
-                    ${PNG_INCLUDE_DIR}
-                    ${Freetype_INCLUDE_DIRS}
+                    ${OPENSSL_INCLUDE_DIR}
                     ${ZLIB_INCLUDE_DIRS}
-                    ${KODI_INCLUDE_DIR})
+                    ${KODI_INCLUDE_DIR}/..) # Hack way with "/..", need bigger Kodi cmake rework to match right include ways (becomes done in future)
                     
-list(APPEND DEPLIBS ${PILLOW_LIBRARIES} ${JPEG_LIBRARIES} ${PNG_LIBRARIES} ${FREETYPE_LIBRARIES} ${ZLIB_LIBRARIES})
+list(APPEND DEPLIBS ${PILLOW_LIBRARIES} ${OPENSSL_LIBRARIES} ${ZLIB_LIBRARIES})
 
 build_addon(script.module.pil PILLOW DEPLIBS)
 
